--- a/Ai-and-Cs-notes/2nd-Year/Operating-systems-and-system-programming/7. Memory-management.md
+++ b/Ai-and-Cs-notes/2nd-Year/Operating-systems-and-system-programming/7. Memory-management.md
@@ -46,7 +46,7 @@ Memory management is a critical aspect of operating systems, involving the manag
 - **Demand Paging:** Only loads pages into memory when they are needed, reducing the amount of physical memory required.
 
 ## Page Replacement Algorithms
-- **FIFO:** Simple but can suffer from Belady's anomaly.
+- **FIFO:** Simple but can suffer from Belady's anomaly in which increasing the number of page frames results in an increase in the number of page faults.
 - **Optimal:** Replaces the page that will not be used for the longest period (ideal but impractical).
 - **LRU:** Uses past behavior to predict future usage, replacing the least recently used page.
 
