--- a/Ai-and-Cs-notes/2nd-Year/Operating-systems-and-system-programming/7. Memory-management.md
+++ b/Ai-and-Cs-notes/2nd-Year/Operating-systems-and-system-programming/7. Memory-management.md
@@ -26,8 +26,8 @@ Memory management is a critical aspect of operating systems, involving the manag
 - **Internal Fragmentation:** Allocated memory may be slightly larger than requested memory.
 - **Compaction:** Technique to deal with fragmentation by shuffling memory contents.
 
-![image](https://github.com/Frnasbukhari/compsci-notes/assets/64270666/eb59f3d6-bb96-4542-a1b4-93bc9609d77e)
-
+ <img src="https://github.com/Frnasbukhari/compsci-notes/assets/64270666/eb59f3d6-bb96-4542-a1b4-93bc9609d77e" width="700">
+ 
 ## Paging
 - Divides physical memory into fixed-size blocks called frames and logical memory into blocks called pages.
 - **Page Table:** Translates logical addresses to physical addresses.
