--- a/Ai-and-Cs-notes/2nd-Year/Operating-systems-and-system-programming/99. Synchronization.md
+++ b/Ai-and-Cs-notes/2nd-Year/Operating-systems-and-system-programming/99. Synchronization.md
@@ -101,7 +101,7 @@ do {
 
 ## 7. Deadlock and Priority Inversion
 
-![image](https://github.com/Frnasbukhari/compsci-notes/assets/64270666/e41a4e1e-ea41-4c92-ac05-0314c956ac6f)
+ <img src="https://github.com/Frnasbukhari/compsci-notes/assets/64270666/e41a4e1e-ea41-4c92-ac05-0314c956ac6f" width="700">
 
 - **Deadlock**: Occurs when two or more processes are waiting indefinitely for an event that can only be triggered by one of the waiting processes.
 - **Priority Inversion**: Lower-priority process holds a lock needed by a higher-priority process.
