Update 2. Basis and Coordinate Systems.md

--- a/notes/Intelligent-data-analysis/2. Basis and Coordinate Systems.md
+++ b/notes/Intelligent-data-analysis/2. Basis and Coordinate Systems.md
@@ -1,1 +1,108 @@
 
+# Week 2 Lecture: Nature of Data - Basis and Coordinate Systems
+
+This lecture explores fundamental concepts related to data representation and analysis, focusing on basis, coordinate systems, and their application in data analysis.
+
+---
+
+## 1. Basis and Coordinate Systems
+
+### 1.1 What is a Basis?
+- A **basis** is a set of functions \( E = \{ e_i \in V \} \) that allows any element \( v \) in a vector space \( V \) to be uniquely expressed as a linear combination:
+  \[
+  v = \sum_{i} \omega_i e_i
+  \]
+- The **dimension** of the space is the number of basis functions.
+- The tuple \( (\omega_1, \omega_2, \dots) \) is the **coordinate representation** of \( v \) in the chosen basis.
+
+### 1.2 Examples of Basis Systems
+- **Canonical Basis in Euclidean Space**: Standard unit vectors, e.g., in \( \mathbb{R}^2 \), \( \{(1, 0), (0, 1)\} \).
+- **Argand Basis in Complex Plane**: Combines real and imaginary components, e.g., \( 1 \) and \( i \) in \( \mathbb{C} \).
+- **Orthogonal Unit Vectors in Physics**: Commonly \( \hat{i}, \hat{j}, \hat{k} \) for 3D Cartesian systems.
+
+**Example**:
+Represent point \( p = (2.5, 1.4) \) in \( \mathbb{R}^2 \):
+\[
+p = 2.5 \cdot (1, 0) + 1.4 \cdot (0, 1)
+\]
+
+### 1.3 Dimension of a Set
+- The **dimension** of a set is the minimum number of descriptors needed to uniquely identify each element.
+- For example, in a set of signals characterized by frequency and amplitude, the dimension is 2.
+
+---
+
+## 2. Decompositions and Coordinate Systems
+
+### 2.1 General Linear Model (GLM)
+- A GLM represents relationships between variables as linear models:
+  \[
+  y = \beta_1 x + \beta_0
+  \]
+- If there are \( n \) independent variables:
+  \[
+  y = \sum_{i=0}^n \beta_i x_i
+  \]
+  Here, \( \{x_0, x_1, \dots, x_n\} \) form a basis, and \( \beta_i \) are the coordinates in the space of all lines.
+
+**Example**:
+Fit a line to points \( (x_1, y_1) \) and \( (x_2, y_2) \):
+\[
+\beta_1 = \frac{y_2 - y_1}{x_2 - x_1}, \quad \beta_0 = y_1 - \beta_1 x_1
+\]
+
+### 2.2 Fourier Analysis
+- Decomposes signals into sinusoidal components:
+  \[
+  f(t) = \sum_{n} c_n e^{j \omega_n t}
+  \]
+  or equivalently:
+  \[
+  f(t) = \sum_{n} \left( a_n \cos(\omega_n t) + b_n \sin(\omega_n t) \right)
+  \]
+- Applications: Signal filtering, spectral analysis.
+
+**Example**:
+For \( f(t) = \sin(2\pi t) + \frac{1}{3}\sin(6\pi t) \), the coefficients \( (1, \frac{1}{3}) \) represent the signal in the Fourier basis.
+
+### 2.3 Wavelets
+- Approximate signals using scaled and translated wave-like functions:
+  \[
+  f(t) = \sum_{k, n} c_{k,n} \Psi(t; k, n)
+  \]
+- Useful for analyzing non-stationary signals, denoising, and compression.
+
+---
+
+## 3. Manifold Embedding
+
+### 3.1 What is a Manifold?
+- A **manifold** is a topological space that locally resembles Euclidean space.
+- Manifold embedding involves mapping data from a high-dimensional space to a lower-dimensional one while preserving structure.
+
+### 3.2 Applications in Machine Learning
+- Dimensionality reduction, e.g., **Locally Linear Embedding (LLE)** and **t-SNE**.
+- Used for understanding complex data structures and visualizing high-dimensional datasets.
+
+---
+
+## 4. Final Remarks
+
+### Key Takeaways
+1. **Coordinate systems** enable representation of data points in different spaces.
+2. **Decompositions** (e.g., Fourier, PCA) provide powerful tools for data analysis by changing the coordinate basis.
+3. Choose the **right tool**:
+   - GLM for regression.
+   - Fourier for signal filtering.
+   - Wavelets for spatiotemporal analysis.
+   - PCA for dimensionality reduction.
+   - Manifold learning for complex embeddings.
+
+### Closing Formula
+The universal data representation principle:
+\[
+p = \sum_{i} \omega_i e_i
+\]
+Every data analysis technique is a transformation in a chosen coordinate system.
+
+---
