Update 2. Basis and Coordinate Systems.md

--- a/notes/Intelligent-data-analysis/2. Basis and Coordinate Systems.md
+++ b/notes/Intelligent-data-analysis/2. Basis and Coordinate Systems.md
@@ -1,4 +1,4 @@
-# Nature of Data — Basis and Coordinate Systems
+# Nature of Data: Basis and Coordinate Systems
 
 [Listen to the AI-generated overview podcast on this lecture!](https://notebooklm.google.com/notebook/09cf60e3-9370-4962-b1d2-c0a2c004eeae/audio)
 
