Update 1. Nature of Data.md

--- a/notes/Intelligent-data-analysis/1. Nature of Data.md
+++ b/notes/Intelligent-data-analysis/1. Nature of Data.md
@@ -119,6 +119,9 @@ These representations are key to data modeling in applications like social netwo
    - Example: Computing statistical metrics like averages or performing clustering.
 
 ### 3.2 Pipelines
+
+<img src="../../images/pipeline.png" alt="Pipeline" width="800">
+
 A **pipeline** combines processing and analysis steps in sequence:
 - Example: In text processing, a pipeline might involve tokenizing text, removing stop words, and applying sentiment analysis.
 - **Key Rules**:
