Update 2. Basis and Coordinate Systems.md

--- a/notes/Intelligent-data-analysis/2. Basis and Coordinate Systems.md
+++ b/notes/Intelligent-data-analysis/2. Basis and Coordinate Systems.md
@@ -6,6 +6,9 @@
 
 ## 1. Basis and Coordinate Systems
 
+<img src="https://i.sstatic.net/oWq2Q.png" alt="Nature of Data" width="800">
+
+
 ### 1.1 What is a Basis?
 A **basis** is a set of functions or vectors that allows every element of a vector space to be expressed **uniquely** as a linear combination of those basis elements. For example:
 
