--- a/notes/Intelligent-data-analysis/2. Basis and Coordinate Systems.md
+++ b/notes/Intelligent-data-analysis/2. Basis and Coordinate Systems.md
@@ -6,7 +6,7 @@
 
 ## 1. Basis and Coordinate Systems
 
-<img src="https://i.sstatic.net/oWq2Q.png" alt="Nature of Data" width="800">
+<img src="https://www.projectchrono.org/assets/manual/coord_trasf6_framemoving.png" alt="Nature of Data" width="800">
 
 
 ### 1.1 What is a Basis?
