Update 03. Dimensional Analysis by Covariance.md

--- a/notes/Intelligent-data-analysis/03. Dimensional Analysis by Covariance.md
+++ b/notes/Intelligent-data-analysis/03. Dimensional Analysis by Covariance.md
@@ -1,10 +1,14 @@
 # Dimensional Analysis by Covariance (Eigendecomposition & PCA)
 
+[Listen to the AI-generated overview podcast on this lecture!](https://notebooklm.google.com/notebook/09cf60e3-9370-4962-b1d2-c0a2c004eeae/audio)
+
+
 This lecture explores the mathematical and conceptual frameworks underlying point clouds, regression analysis, covariance, eigendecomposition, and Principal Component Analysis (PCA). These tools are foundational for dimensionality reduction, data visualization, and regression modeling.
 
 ---
 
 ## 1. Introduction to Point Clouds
+<img src="https://images.ctfassets.net/26961o1141cc/1ntbH068mqsmzD1v7P69hy/d6a023bdc9027478dca19a2b49c66b82/p6.png?w=2400&h=1000&fm=webp&q=100" alt="Nature of Data" width="800">
 
 ### 1.1 What is a Point Cloud?  
 A **point cloud** is a discrete set of points within a vector space, often sampled from a larger Euclidean space. Formally:
